Actions
Bug #10493
closedpts: cast between incompatible function types
Start date:
2019-03-02
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Build error with gcc 8:
../../common/io/pts.c:149:2: error: cast between incompatible function types from 'void (*)(queue_t *)' {aka 'void (*)(struct queue *)'} to 'int (*)()' [-Werror=cast-function-type] (int (*)()) ptsrsrv, ^ ../../common/io/pts.c:158:2: error: cast between incompatible function types from 'void (*)(queue_t *, mblk_t *)' {aka 'void (*)(struct queue *, struct msgb *)'} to 'int (*)()' [-Werror=cast-function-type] (int (*)()) ptswput, ^ ../../common/io/pts.c:159:2: error: cast between incompatible function types from 'void (*)(queue_t *)' {aka 'void (*)(struct queue *)'} to 'int (*)()' [-Werror=cast-function-type] (int (*)()) ptswsrv, ^ ../../common/io/pts.c: In function 'ptswput': ../../common/io/pts.c:622:3: error: this statement may fall through [-Werror=implicit-fallthrough=] switch (iocp->ioc_cmd) { ^~~~~~ ../../common/io/pts.c:643:2: note: here default: ^~~~~~~ cc1: all warnings being treated as errors
Updated by Electric Monk about 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 2c26b085561320ff0be162e984d17279aafda6a9
commit 2c26b085561320ff0be162e984d17279aafda6a9 Author: Toomas Soome <tsoome@me.com> Date: 2019-03-15T20:53:37.000Z 10493 pts: cast between incompatible function types Reviewed by: Gergő Doma <domag02@gmail.com> Reviewed by: C Fraire <cfraire@me.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions